features: add new streams to employee processing