@@ -5,15 +5,20 @@ import Utilities.EmployeeUtilities;
 
 public class App {
     public static void main(String[] args) {
-        
-        List<Employee> employees = Arrays.asList(
-            new Employee(1, "Alice", 75000, "IT", 28, Arrays.asList("Java", "Spring")),
-            new Employee(2, "Bob", 50000, "HR", 35, Arrays.asList("Communication", "Recruiting")),
-            new Employee(3, "Charlie", 120000, "Finance", 40, Arrays.asList("Excel", "Accounting", "Analysis")),
-            new Employee(4, "Diana", 95000, "IT", 30, Arrays.asList("Java", "React")),
-            new Employee(5, "Ethan", 45000, "Sales", 25, Arrays.asList("Negotiation", "CRM")),
-            new Employee(6, "Fiona", 80000, "Finance", 38, Arrays.asList("Analysis", "Reporting"))
+
+        List<Employee> employees = List.of(
+            new Employee(1, "Amit Sharma", 75000, "Engineering", 26, List.of("Java", "SQL", "Spring")),
+            new Employee(2, "Neha Verma", 50000, "Engineering", 32, List.of("Java", "Python", "AWS")),
+            new Employee(3, "Rohan Gupta", 120000, "Engineering", 24, List.of("SQL", "Java", "Docker")),
+            new Employee(4,"Sara Khan", 95000, "HR",29, List.of("Communication", "Recruitment", "SQL")),
+            new Employee(5, "Ishaan Mehta", 45000, "HR", 35, List.of("SQL", "Java", "Excel")),
+            new Employee(6, "Priya Desai", 80000, "HR", 23, List.of("Java ", " SQL")),
+            new Employee(7, "Rahul Nair", 25000, "Finance", 27, List.of("Excel", "SQL", "Java")),
+            new Employee(8, "Sneha Iyer",60000 , "Finance", 30, List.of("SQL", "Power BI")),
+            new Employee(9, "Dev Patel", 85000,"Finance",28, List.of("Java", "SQL", "Python")),
+            new Employee(10, "Aarav Joshi", 10000,"Engineering",22, List.of("java", "sql"))
         );
+
 
         /*
          * Sort employees by salary and age
@@ -34,5 +39,39 @@ public class App {
          EmployeeUtilities.getDistinctDepartments(employees).forEach((e) -> {
             System.out.println(e);
          });
+
+         /*
+          * 
+          * find the youngest employee in each department 
+          * whose skills include both "Java" and "SQL"
+          * 
+          */
+
+        System.out.println("\n");
+
+        EmployeeUtilities.getYoungestEmployeeInEachDepartmentWithJavaAndSqlSkills(employees).forEach((dept, empOpt) -> {
+            System.out.println(dept + " -> " + empOpt.map(Employee::name).orElse(null));
+        });
+
+        /*
+         * 
+         * Get length of all employees name
+         */
+        System.out.println("\n");
+         EmployeeUtilities.getLengthOfEmployeeNames(employees).forEach((name, length) -> {
+            System.out.println("Employee name: "+name+" character length of their name is: "+length);
+         });
+
+         /*
+        * 
+        * get employees by department
+        * or group employees based on department
+        */
+
+        System.out.println("\n");
+        EmployeeUtilities.getEmployeesByDepartment(employees).forEach((department, names) -> {
+            System.out.println(department+" --> "+names);
+        });
+
     }
 }
